Fix typo in nonlinear regression notebook

--- a/notebooks/nonlinear_regression_models.ipynb
+++ b/notebooks/nonlinear_regression_models.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "source": [
     "## NIST nonlinear regression dataset\n",
-    "The National Institute of Standards and Technology (NIST) proposed a number datasets used for validating the accuracy and robustness of a certain minimization algorithm for nonlinear regression.  \n",
+    "The National Institute of Standards and Technology (NIST) proposed a number of datasets used for validating the accuracy and robustness of a certain minimization algorithm for nonlinear regression.  \n",
     "It includes both generated and \"real-world\" nonlinear least squares problems of varying levels of difficulty. The database consists of 27 datasets. Below are the 15 models I extracted and will be using to test my nonlinear regression algorithm:  \n",
     "\n",
     "### Lower difficulty datasets\n",
